# btc-lib

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
BTC/: address.py  addresses.py  const.py  exceptions.py  script.py  services.py  transaction.py  utils.py
BTC/bit/: services.py
btclib/: __init__.py  address.py  bech32.py  const.py  exceptions.py  old.services.py  script.py  service.py  services.py  transaction.py  utils.py
btclib/bit/: services.py
tests/: address_units.json  conftest.py  pvs_inf.json  test_address.py  test_addresses.py  test_keys.json  test_script.py  test_service.py  test_transaction.py  test_transactions.json  test_utils.py  txs.json
