[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "btc-lib"
description = "Simple Bitcoin Library"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    'base58check~=1.0.2',
    'ecdsa~=0.19.0',
    'httpx~=0.27.0',
]
requires-python = ">= 3.12"
license = {file = "LICENSE"}
keywords = [
    'bitcoin',
    'blockchain',
    'library',
    'simple',
    'btc',
    'lib'
]
authors = [
    {name = "qwerty-w", email = "itsqwz@gmail.com"}
]
[project.urls]
Homepage = "https://github.com/qwerty-w/btc-lib"
Repository = "https://github.com/qwerty-w/btc-lib.git"

[tool.setuptools.dynamic]
version = {attr = 'btclib.__version__'}